Updated github pages to look more clean

--- a/index.html
+++ b/index.html
@@ -2,26 +2,44 @@
 <html lang = "en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; URL=https://www.linkedin.com/in/aeybel-varghese/" />
+    <!-- <meta http-equiv="refresh" content="0; URL=https://www.linkedin.com/in/aeybel-varghese/" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Aeybel Varghese - Coming Soon!</title>
-    <meta name="description" content="My personal page">
+    <meta name="description" content="Aeybel Varghese Portfolio">
     <meta name="author" content="Aeybel Varghese">
 
     <meta property="og:title" content="Aeybel Varghese's Personal Page">
     <meta property="og:type" content="website">
     <meta property="og:url" content="AeybelV.github.io">
-    <meta property="og:description" content="Coming soon">
+    <meta property="og:description" content="Aeybel Varghese">
     <!-- <meta property="og:image" content="image.png"> -->
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+
+    <script src="https://kit.fontawesome.com/8ff3711f5e.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
-    <div id="placeholder">
-        <h1>Aeybel Varghese</h1>
-        <p>Coming Soon</p>
+    <div id="container">
+        <section>
+            <div id="intro">
+                <h5>Hello, my name is</h5>
+                <h1><span class="button-animated" id="firstName">Aeybel</span> <span class="button-animated">Varghese</span></h1>
+            </div>
+            <div id="intro-subtext">
+                <a href="resources/Fall 2022 Resume Aeybel Varghese.pdf" class="button button-animated">Résumé</a>
+                <a href = "projects.html" class="button button-animated">Projects</a>
+            </div>
+            <div id="links">
+                <a href="https://github.com/AeybelV"><i class="fa-brands fa-github button"></i></a>
+                <a href="https://www.linkedin.com/in/aeybel-varghese/"><i class="fa-brands fa-linkedin button"></i></a>
+                <a href="mailto:aeybelvarghese@gmail.com"><i class="fa-solid fa-envelope button"></i></a>
+            </div>
+        </section>
+
+        
     </div>
+  
 </body>
 </html>
