--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1><span class="button-animated" id="firstName">Aeybel</span> <span class="button-animated">Varghese</span></h1>
             </div>
             <div id="intro-subtext">
-                <a href="resources/Fall 2022 Resume Aeybel Varghese.pdf" class="button button-animated">Résumé</a>
+                <a href="resources/Aeybel Varghese Fall 2023 Resume.pdf" class="button button-animated">Résumé</a>
                 <a href = "projects.html" class="button button-animated">Projects</a>
             </div>
             <div id="links">
